objects/AuxiliaryObject__c.object
<CustomObject>
    <description>This object is used as a helper to create lookup fields to various objects so that they may be used in e.g. AJAX lookups.</description>
    <fields>
        <fullName>Continuous_Integration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Continuous Integration</label>
        <referenceTo>Continuous_Integration__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Data_Template__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Data_Template__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Default_Number__c</fullName>
        <label>Default Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_String__c</fullName>
        <label>Default String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Text__c</fullName>
        <label>Default Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pipeline</label>
        <referenceTo>Deployment_Flow__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Git_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Snapshot</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Git_Backup__c.Git_Snapshot_Permissions__c</field>
                <operation>notEqual</operation>
                <value>Allow Commits Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Git_Backup__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Repository</label>
        <referenceTo>Git_Repository__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Difference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Difference</label>
        <referenceTo>OrgDiff__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Version</label>
        <referenceTo>Artifact_Version__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selenium_Test_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selenium Test Group</label>
        <referenceTo>Selenium_Test_Group__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selenium_Test_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selenium Test Run</label>
        <referenceTo>Selenium_Test_Run__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snapshot_Difference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snapshot Difference</label>
        <referenceTo>Snapshot_Difference__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Static_Code_Analysis_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Static Code Analysis Settings</label>
        <referenceTo>Static_Code_Analysis_Settings__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AuxiliaryObject</label>
    <nameField>
        <label>AuxiliaryObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuxiliaryObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>